# FIT

./: .env.sample  .env.testing  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  aerich.ini  docker-compose.itest.override.yml  docker-compose.yml  local_server.py  logic.py  pyproject.toml  requirements-docs.txt  requirements-itest.txt  requirements-test.txt  requirements.txt  setup.cfg
1/: README.md  progtest_solver.h  sample_tester.cpp  sample_tester.h  solution.cpp  task.txt
2/: sample.tgz  solution.c
BEZ/task2_hash/: Makefile  README.adoc  hash.cpp
BEZ/task3_block/: Makefile  README.adoc  block.cpp  check_some_modes
BEZ/task4_asymmetric/: Makefile  encrypt.c
BEZ/task5_certificates/: Makefile  connect.c
OSY/1/: common.h  sample.tgz
OSY/2/: README.md  task.txt
PSI/: README.md
PSI/tcp_server/: TaskEN.md
PSI/udp/: udp.py
SP1/: Dockerfile.itest  docker-compose.yml  setup.cfg
SP1/apixy/: config.py
VWM/: en_stopwords.json  lambda_function.py  local_server.py  process_and_upload_dataset.py
VWM/docs/: paper.tex
ZUM/01_pathfinding/: README.md
ZUM/03_planning_pddl/: README.md
apixy/: app.py  cache.py  config.py  models.py
apixy/api/: app.py
apixy/core/: __init__.py
apixy/entities/: datasource.py  merge_strategy.py  project.py  proxy_response.py  shared.py  validators.py
apixy/shared/: __init__.py  entities.py  response.py  usecase.py
docs/: conf.py  index.rst
frontend/: README.md  package.json
requirements/: dev.txt
tcp_server/: README.md  TaskCZ.md  tcp_server.py
tests/: fixtures.py
udp/: README.md
(+88 files in other folders)
