[tool.poetry]
name = "boolean_model"
version = "0.1.0"
description = "A backend for \"Boolean model\" university project"
authors = ["Dmytro Osaulenko <osauldmy@fit.cvut.cz>"]

[tool.poetry.dependencies]
python = "^3.8"
pyeda = "^0.28.0"
nltk = "^3.5"
aiobotocore = {extras = ["awscli"], version = "^1.0.7"}

[tool.poetry.dev-dependencies]
aiohttp_cors = "^0.7.0"
aiofiles = "^0.5.0"
textract = "^1.6.3"
tqdm = "^4.46.1"
mypy = "^0.770"
black = "^19.10b0"
pdbpp = "^0.10.2"
flake8 = "^3.8.1"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
